<resources>
    <string name="app_name">Newsgroups NDY</string>

    <!-- Server View -->
    <string name="server_name_hint">Example server</string>
    <string name="server_name_title">Server name</string>
    <string name="server_url_title">Server URL</string>
    <string name="server_url_hint">news.example.com</string>
    <string name="user_name_title">Your name</string>
    <string name="user_name_hint">Jane Doe</string>
    <string name="user_mail_title">Your email</string>
    <string name="user_mail_hint">jane.doe@example.com</string>
    <string name="new_server">New server</string>

    <!-- Group view -->
    <string name="group_name_title">Subscribe to groups</string>
    <string name="new_group">Subscribe to groups</string>

    <!--Add Group View-->
    <string name="subscribe_to">Subscribe to groups for %1$s</string>

    <!-- Buttons -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <!-- Server content provider -->
    <string name="content_authority">me.lehrner.newsgroupsndy.provider</string>
    <string name="menu">Menu</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="url_invalid">URL is not valid</string>
    <string name="search">Search</string>
    <string name="search_groups">Search groups</string>
    <string name="subscribed_groups">Subscribed Groups</string>
    <string name="not_subscribed">Not subscribed</string>
    <string name="subscribed">Subscribed</string>
    <string name="add_server">Add new server</string>
    <string name="unsubscribe">Unsubscribe</string>
</resources>
