<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:paddingStart="@dimen/app_margin"
    android:paddingEnd="@dimen/app_margin"
    tools:context="me.lehrner.newsgroupsndy.view.AddServerActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_white_24dp"
        android:contentDescription="@string/cancel"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:id="@+id/add_server_close"
        android:onClick="onAddServerCancel"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:text="@string/new_server"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@id/add_server_close"
        android:layout_toStartOf="@+id/add_server_save"/>

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:gravity="end|center"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:id="@+id/add_server_save"
        android:onClick="onAddServerSave"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>